container/kubernetes/tutorials/concept/services-networking/ingress/nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
# 告诉 Kubernetes "谁来实现这个 Ingress"
  ingressClassName: nginx
  rules:
  - host: nginx.local
    http:
      paths:
      - path: /nginx
        pathType: Prefix
        backend:
          service:
            name: nginx
            port:
              number: 80
